# OpenMOSS-ja

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
examples/: hypothesis.jsonl  reference.jsonl
moss_ja_eval/: __init__.py  infer.py  io.py  local_llm.py  metrics.py  reference.py  report.py  score.py  webapp.py
tests/: test_local_llm.py  test_metrics.py  test_report.py  test_webapp.py
