[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmoss-ja-eval"
version = "0.1.0"
description = "Reproducible Japanese evaluation for MOSS-Transcribe-Diarize"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = ["rapidfuzz>=3.0"]

[project.optional-dependencies]
inference = [
  "moss-transcribe-diarize @ git+https://github.com/OpenMOSS/MOSS-Transcribe-Diarize.git",
  "torch>=2.8",
  "torchaudio>=2.8",
]
dev = ["pytest>=8"]

[project.scripts]
moss-ja-score = "moss_ja_eval.score:main"
moss-ja-infer = "moss_ja_eval.infer:main"
moss-ja-reference = "moss_ja_eval.reference:main"
moss-ja-report = "moss_ja_eval.report:main"

[tool.setuptools.packages.find]
include = ["moss_ja_eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
